--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
                 <ul class="d-flex justify-center wrap gap-4">
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./about.html">About Us</a></li>
-                    <li>Publication</li>
-                    <li>Feedback</li>
+                    <li><a href="Publication.html">Publication</a></li>
+                    <li><a href="Feedback.html">Feedback</a></li>
                     <button class="button1">Get a Frenchinse</button>
                     <button class="button2">Order Online</button>
                 </ul>
@@ -54,7 +54,7 @@
         <p>Islamabad
             In February 2012, the first franchise of Salt’n Pepper restaurants was <br> opened at the prime location of Blue Area, Islamabad. It was warmly <br> welcomed by the residents of Islamabad as well as the neighboring towns.</p>
             <div class="d-flex justify-center wrap">
-            <img width="500px"src="https://images-beta.tossdown.com/site/7aba8915-02ed-46ee-bd96-1063abe072fa.webp" alt="image">
+            <img width="400px"src="https://images-beta.tossdown.com/site/7aba8915-02ed-46ee-bd96-1063abe072fa.webp" alt="image">
         </div>
             <div>
                 <img class="center"id="pool"src="https://images-beta.tossdown.com/site/a1520a05-acdb-4aa8-a2cd-2fe1b47beb62.webp" alt="image">
@@ -154,7 +154,7 @@
                                 
                                 <div class="d-flex justify-between fontsize2">
                                 <div><p id="quite">2024 Salt n Peper Restaurant</p></div>
-                                <div><p id="den">Powered By Hassan Khan</p></div>
+                                <div><p id="den">powered by hammad malik salt & paper</p></div>
                                 </div>
                                 
 
